parser.output
Terminals unused in grammar

    T_METHODNAME


Grammar

    0 $accept: Start $end

    1 Start: classes

    2 classes: classes class_
    3        | class

    4 class_: superclass
    5       | class

    6 class: name T_LBRACKET members methods T_RBRACKET
    7      | name T_LBRACKET members T_RBRACKET
    8      | name T_LBRACKET methods T_RBRACKET
    9      | name T_LBRACKET T_RBRACKET

   10 superclass: name T_EXTENDS name T_LBRACKET members methods T_RBRACKET
   11           | name T_EXTENDS name T_LBRACKET members T_RBRACKET
   12           | name T_EXTENDS name T_LBRACKET methods T_RBRACKET
   13           | name T_EXTENDS name T_LBRACKET T_RBRACKET

   14 members: members type name T_SEMICOLON
   15        | type name T_SEMICOLON

   16 methods: methods method_decl
   17        | method_decl

   18 method_decl: name T_LPAREN params T_RPAREN T_ARROW type T_LBRACKET body T_RBRACKET
   19            | name T_LPAREN params T_RPAREN T_ARROW T_NONE T_LBRACKET body T_RBRACKET

   20 body: declarations statements return_
   21     | declarations statements
   22     | declarations return_
   23     | declarations
   24     | statements return_
   25     | statements
   26     | return_
   27     | ε

   28 declarations: declarations declaration
   29             | declaration

   30 declaration: type names T_SEMICOLON

   31 names: name
   32      | names T_COMMA name

   33 return_: T_RETURN expression T_SEMICOLON

   34 statements: statements statement
   35           | statement

   36 statement: assignment T_SEMICOLON
   37          | method_call T_SEMICOLON
   38          | if_else
   39          | while_
   40          | do_while T_SEMICOLON
   41          | print T_SEMICOLON

   42 assignment: name T_EQ expression
   43           | name T_DOT name T_EQ expression

   44 if_else: T_IF expression T_LBRACKET statements T_RBRACKET
   45        | T_IF expression T_LBRACKET statements T_RBRACKET T_ELSE T_LBRACKET statements T_RBRACKET

   46 while_: T_WHILE expression T_LBRACKET statements T_RBRACKET

   47 do_while: T_DO T_LBRACKET statements T_RBRACKET T_WHILE T_LPAREN expression T_RPAREN

   48 print: T_PRINT expression

   49 name: T_ID

   50 params: params_
   51       | ε

   52 params_: params_ T_COMMA param
   53        | param

   54 param: type name

   55 type: T_BOOL
   56     | T_INT
   57     | name

   58 expression: expression T_ADD expression
   59           | expression T_SUB expression
   60           | expression T_MUL expression
   61           | expression T_DIV expression
   62           | expression T_GT expression
   63           | expression T_GTE expression
   64           | expression T_EQUALTO expression
   65           | expression T_AND expression
   66           | expression T_OR expression
   67           | T_NOT expression
   68           | expression T_QMARK expression T_COLON expression
   69           | T_UNARYMINUS expression
   70           | T_LPAREN expression T_RPAREN
   71           | T_NUM
   72           | name T_DOT name
   73           | name
   74           | method_call
   75           | T_TRUE
   76           | T_FALSE
   77           | new

   78 new: T_NEW name
   79    | T_NEW name T_LPAREN arguments T_RPAREN

   80 method_call: name T_LPAREN arguments T_RPAREN
   81            | name T_DOT name T_LPAREN arguments T_RPAREN

   82 arguments: arguments_
   83          | ε

   84 arguments_: arguments_ T_COMMA expression
   85           | expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PRINT (258) 48
    T_RETURN (259) 33
    T_IF (260) 44 45
    T_ELSE (261) 45
    T_WHILE (262) 46 47
    T_NEW (263) 78 79
    T_NONE (264) 19
    T_EXTENDS (265) 10 11 12 13
    T_DO (266) 47
    T_ARROW (267) 18 19
    T_DOT (268) 43 72 81
    T_COMMA (269) 32 52 84
    T_METHODNAME (270)
    T_LBRACKET (271) 6 7 8 9 10 11 12 13 18 19 44 45 46 47
    T_RBRACKET (272) 6 7 8 9 10 11 12 13 18 19 44 45 46 47
    T_QMARK (273) 68
    T_COLON (274) 68
    T_SEMICOLON (275) 14 15 30 33 36 37 40 41
    T_OR (276) 66
    T_AND (277) 65
    T_EQUALTO (278) 64
    T_GT (279) 62
    T_GTE (280) 63
    T_ADD (281) 58
    T_SUB (282) 59
    T_DIV (283) 61
    T_MUL (284) 60
    T_UNARYMINUS (285) 69
    T_NOT (286) 67
    T_LPAREN (287) 18 19 47 70 79 80 81
    T_RPAREN (288) 18 19 47 70 79 80 81
    T_ID <base_char_ptr> (289) 49
    T_INT (290) 56
    T_TRUE (291) 75
    T_FALSE (292) 76
    T_NUM <base_int> (293) 71
    T_BOOL <booleantype_ptr> (294) 55
    T_EQ (295) 42 43


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    Start <program_ptr> (42)
        on left: 1
        on right: 0
    classes <class_list_ptr> (43)
        on left: 2 3
        on right: 1 2
    class_ <class_ptr> (44)
        on left: 4 5
        on right: 2
    class <class_ptr> (45)
        on left: 6 7 8 9
        on right: 3 5
    superclass <class_ptr> (46)
        on left: 10 11 12 13
        on right: 4
    members <declaration_list_ptr> (47)
        on left: 14 15
        on right: 6 7 10 11 14
    methods <method_list_ptr> (48)
        on left: 16 17
        on right: 6 8 10 12 16
    method_decl <method_ptr> (49)
        on left: 18 19
        on right: 16 17
    body <methodbody_ptr> (50)
        on left: 20 21 22 23 24 25 26 27
        on right: 18 19
    declarations <declaration_list_ptr> (51)
        on left: 28 29
        on right: 20 21 22 23 28
    declaration <declaration_ptr> (52)
        on left: 30
        on right: 28 29
    names <identifier_list_ptr> (53)
        on left: 31 32
        on right: 30 32
    return_ <returnstatement_ptr> (54)
        on left: 33
        on right: 20 22 24 26
    statements <statement_list_ptr> (55)
        on left: 34 35
        on right: 20 21 24 25 34 44 45 46 47
    statement <statement_ptr> (56)
        on left: 36 37 38 39 40 41
        on right: 34 35
    assignment <assignment_ptr> (57)
        on left: 42 43
        on right: 36
    if_else <ifelse_ptr> (58)
        on left: 44 45
        on right: 38
    while_ <while_ptr> (59)
        on left: 46
        on right: 39
    do_while <dowhile_ptr> (60)
        on left: 47
        on right: 40
    print <print_ptr> (61)
        on left: 48
        on right: 41
    name <identifier_ptr> (62)
        on left: 49
        on right: 6 7 8 9 10 11 12 13 14 15 18 19 31 32 42 43 54 57 72 73 78 79 80 81
    params <parameter_list_ptr> (63)
        on left: 50 51
        on right: 18 19
    params_ <parameter_list_ptr> (64)
        on left: 52 53
        on right: 50 52
    param <parameter_ptr> (65)
        on left: 54
        on right: 52 53
    type <type_ptr> (66)
        on left: 55 56 57
        on right: 14 15 18 30 54
    expression <expression_ptr> (67)
        on left: 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
        on right: 33 42 43 44 45 46 47 48 58 59 60 61 62 63 64 65 66 67 68 69 70 84 85
    new <new_ptr> (68)
        on left: 78 79
        on right: 77
    method_call <methodcall_ptr> (69)
        on left: 80 81
        on right: 37 74
    arguments <expression_list_ptr> (70)
        on left: 82 83
        on right: 79 80 81
    arguments_ <expression_list_ptr> (71)
        on left: 84 85
        on right: 82 84


State 0

    0 $accept: • Start $end

    T_ID  shift, and go to state 1

    Start    go to state 2
    classes  go to state 3
    class    go to state 4
    name     go to state 5


State 1

   49 name: T_ID •

    $default  reduce using rule 49 (name)


State 2

    0 $accept: Start • $end

    $end  shift, and go to state 6


State 3

    1 Start: classes •
    2 classes: classes • class_

    T_ID  shift, and go to state 1

    $default  reduce using rule 1 (Start)

    class_      go to state 7
    class       go to state 8
    superclass  go to state 9
    name        go to state 10


State 4

    3 classes: class •

    $default  reduce using rule 3 (classes)


State 5

    6 class: name • T_LBRACKET members methods T_RBRACKET
    7      | name • T_LBRACKET members T_RBRACKET
    8      | name • T_LBRACKET methods T_RBRACKET
    9      | name • T_LBRACKET T_RBRACKET

    T_LBRACKET  shift, and go to state 11


State 6

    0 $accept: Start $end •

    $default  accept


State 7

    2 classes: classes class_ •

    $default  reduce using rule 2 (classes)


State 8

    5 class_: class •

    $default  reduce using rule 5 (class_)


State 9

    4 class_: superclass •

    $default  reduce using rule 4 (class_)


State 10

    6 class: name • T_LBRACKET members methods T_RBRACKET
    7      | name • T_LBRACKET members T_RBRACKET
    8      | name • T_LBRACKET methods T_RBRACKET
    9      | name • T_LBRACKET T_RBRACKET
   10 superclass: name • T_EXTENDS name T_LBRACKET members methods T_RBRACKET
   11           | name • T_EXTENDS name T_LBRACKET members T_RBRACKET
   12           | name • T_EXTENDS name T_LBRACKET methods T_RBRACKET
   13           | name • T_EXTENDS name T_LBRACKET T_RBRACKET

    T_EXTENDS   shift, and go to state 12
    T_LBRACKET  shift, and go to state 11


State 11

    6 class: name T_LBRACKET • members methods T_RBRACKET
    7      | name T_LBRACKET • members T_RBRACKET
    8      | name T_LBRACKET • methods T_RBRACKET
    9      | name T_LBRACKET • T_RBRACKET

    T_RBRACKET  shift, and go to state 13
    T_ID        shift, and go to state 1
    T_INT       shift, and go to state 14
    T_BOOL      shift, and go to state 15

    members      go to state 16
    methods      go to state 17
    method_decl  go to state 18
    name         go to state 19
    type         go to state 20


State 12

   10 superclass: name T_EXTENDS • name T_LBRACKET members methods T_RBRACKET
   11           | name T_EXTENDS • name T_LBRACKET members T_RBRACKET
   12           | name T_EXTENDS • name T_LBRACKET methods T_RBRACKET
   13           | name T_EXTENDS • name T_LBRACKET T_RBRACKET

    T_ID  shift, and go to state 1

    name  go to state 21


State 13

    9 class: name T_LBRACKET T_RBRACKET •

    $default  reduce using rule 9 (class)


State 14

   56 type: T_INT •

    $default  reduce using rule 56 (type)


State 15

   55 type: T_BOOL •

    $default  reduce using rule 55 (type)


State 16

    6 class: name T_LBRACKET members • methods T_RBRACKET
    7      | name T_LBRACKET members • T_RBRACKET
   14 members: members • type name T_SEMICOLON

    T_RBRACKET  shift, and go to state 22
    T_ID        shift, and go to state 1
    T_INT       shift, and go to state 14
    T_BOOL      shift, and go to state 15

    methods      go to state 23
    method_decl  go to state 18
    name         go to state 19
    type         go to state 24


State 17

    8 class: name T_LBRACKET methods • T_RBRACKET
   16 methods: methods • method_decl

    T_RBRACKET  shift, and go to state 25
    T_ID        shift, and go to state 1

    method_decl  go to state 26
    name         go to state 27


State 18

   17 methods: method_decl •

    $default  reduce using rule 17 (methods)


State 19

   18 method_decl: name • T_LPAREN params T_RPAREN T_ARROW type T_LBRACKET body T_RBRACKET
   19            | name • T_LPAREN params T_RPAREN T_ARROW T_NONE T_LBRACKET body T_RBRACKET
   57 type: name •

    T_LPAREN  shift, and go to state 28

    $default  reduce using rule 57 (type)


State 20

   15 members: type • name T_SEMICOLON

    T_ID  shift, and go to state 1

    name  go to state 29


State 21

   10 superclass: name T_EXTENDS name • T_LBRACKET members methods T_RBRACKET
   11           | name T_EXTENDS name • T_LBRACKET members T_RBRACKET
   12           | name T_EXTENDS name • T_LBRACKET methods T_RBRACKET
   13           | name T_EXTENDS name • T_LBRACKET T_RBRACKET

    T_LBRACKET  shift, and go to state 30


State 22

    7 class: name T_LBRACKET members T_RBRACKET •

    $default  reduce using rule 7 (class)


State 23

    6 class: name T_LBRACKET members methods • T_RBRACKET
   16 methods: methods • method_decl

    T_RBRACKET  shift, and go to state 31
    T_ID        shift, and go to state 1

    method_decl  go to state 26
    name         go to state 27


State 24

   14 members: members type • name T_SEMICOLON

    T_ID  shift, and go to state 1

    name  go to state 32


State 25

    8 class: name T_LBRACKET methods T_RBRACKET •

    $default  reduce using rule 8 (class)


State 26

   16 methods: methods method_decl •

    $default  reduce using rule 16 (methods)


State 27

   18 method_decl: name • T_LPAREN params T_RPAREN T_ARROW type T_LBRACKET body T_RBRACKET
   19            | name • T_LPAREN params T_RPAREN T_ARROW T_NONE T_LBRACKET body T_RBRACKET

    T_LPAREN  shift, and go to state 28


State 28

   18 method_decl: name T_LPAREN • params T_RPAREN T_ARROW type T_LBRACKET body T_RBRACKET
   19            | name T_LPAREN • params T_RPAREN T_ARROW T_NONE T_LBRACKET body T_RBRACKET

    T_ID    shift, and go to state 1
    T_INT   shift, and go to state 14
    T_BOOL  shift, and go to state 15

    $default  reduce using rule 51 (params)

    name     go to state 33
    params   go to state 34
    params_  go to state 35
    param    go to state 36
    type     go to state 37


State 29

   15 members: type name • T_SEMICOLON

    T_SEMICOLON  shift, and go to state 38


State 30

   10 superclass: name T_EXTENDS name T_LBRACKET • members methods T_RBRACKET
   11           | name T_EXTENDS name T_LBRACKET • members T_RBRACKET
   12           | name T_EXTENDS name T_LBRACKET • methods T_RBRACKET
   13           | name T_EXTENDS name T_LBRACKET • T_RBRACKET

    T_RBRACKET  shift, and go to state 39
    T_ID        shift, and go to state 1
    T_INT       shift, and go to state 14
    T_BOOL      shift, and go to state 15

    members      go to state 40
    methods      go to state 41
    method_decl  go to state 18
    name         go to state 19
    type         go to state 20


State 31

    6 class: name T_LBRACKET members methods T_RBRACKET •

    $default  reduce using rule 6 (class)


State 32

   14 members: members type name • T_SEMICOLON

    T_SEMICOLON  shift, and go to state 42


State 33

   57 type: name •

    $default  reduce using rule 57 (type)


State 34

   18 method_decl: name T_LPAREN params • T_RPAREN T_ARROW type T_LBRACKET body T_RBRACKET
   19            | name T_LPAREN params • T_RPAREN T_ARROW T_NONE T_LBRACKET body T_RBRACKET

    T_RPAREN  shift, and go to state 43


State 35

   50 params: params_ •
   52 params_: params_ • T_COMMA param

    T_COMMA  shift, and go to state 44

    $default  reduce using rule 50 (params)


State 36

   53 params_: param •

    $default  reduce using rule 53 (params_)


State 37

   54 param: type • name

    T_ID  shift, and go to state 1

    name  go to state 45


State 38

   15 members: type name T_SEMICOLON •

    $default  reduce using rule 15 (members)


State 39

   13 superclass: name T_EXTENDS name T_LBRACKET T_RBRACKET •

    $default  reduce using rule 13 (superclass)


State 40

   10 superclass: name T_EXTENDS name T_LBRACKET members • methods T_RBRACKET
   11           | name T_EXTENDS name T_LBRACKET members • T_RBRACKET
   14 members: members • type name T_SEMICOLON

    T_RBRACKET  shift, and go to state 46
    T_ID        shift, and go to state 1
    T_INT       shift, and go to state 14
    T_BOOL      shift, and go to state 15

    methods      go to state 47
    method_decl  go to state 18
    name         go to state 19
    type         go to state 24


State 41

   12 superclass: name T_EXTENDS name T_LBRACKET methods • T_RBRACKET
   16 methods: methods • method_decl

    T_RBRACKET  shift, and go to state 48
    T_ID        shift, and go to state 1

    method_decl  go to state 26
    name         go to state 27


State 42

   14 members: members type name T_SEMICOLON •

    $default  reduce using rule 14 (members)


State 43

   18 method_decl: name T_LPAREN params T_RPAREN • T_ARROW type T_LBRACKET body T_RBRACKET
   19            | name T_LPAREN params T_RPAREN • T_ARROW T_NONE T_LBRACKET body T_RBRACKET

    T_ARROW  shift, and go to state 49


State 44

   52 params_: params_ T_COMMA • param

    T_ID    shift, and go to state 1
    T_INT   shift, and go to state 14
    T_BOOL  shift, and go to state 15

    name   go to state 33
    param  go to state 50
    type   go to state 37


State 45

   54 param: type name •

    $default  reduce using rule 54 (param)


State 46

   11 superclass: name T_EXTENDS name T_LBRACKET members T_RBRACKET •

    $default  reduce using rule 11 (superclass)


State 47

   10 superclass: name T_EXTENDS name T_LBRACKET members methods • T_RBRACKET
   16 methods: methods • method_decl

    T_RBRACKET  shift, and go to state 51
    T_ID        shift, and go to state 1

    method_decl  go to state 26
    name         go to state 27


State 48

   12 superclass: name T_EXTENDS name T_LBRACKET methods T_RBRACKET •

    $default  reduce using rule 12 (superclass)


State 49

   18 method_decl: name T_LPAREN params T_RPAREN T_ARROW • type T_LBRACKET body T_RBRACKET
   19            | name T_LPAREN params T_RPAREN T_ARROW • T_NONE T_LBRACKET body T_RBRACKET

    T_NONE  shift, and go to state 52
    T_ID    shift, and go to state 1
    T_INT   shift, and go to state 14
    T_BOOL  shift, and go to state 15

    name  go to state 33
    type  go to state 53


State 50

   52 params_: params_ T_COMMA param •

    $default  reduce using rule 52 (params_)


State 51

   10 superclass: name T_EXTENDS name T_LBRACKET members methods T_RBRACKET •

    $default  reduce using rule 10 (superclass)


State 52

   19 method_decl: name T_LPAREN params T_RPAREN T_ARROW T_NONE • T_LBRACKET body T_RBRACKET

    T_LBRACKET  shift, and go to state 54


State 53

   18 method_decl: name T_LPAREN params T_RPAREN T_ARROW type • T_LBRACKET body T_RBRACKET

    T_LBRACKET  shift, and go to state 55


State 54

   19 method_decl: name T_LPAREN params T_RPAREN T_ARROW T_NONE T_LBRACKET • body T_RBRACKET

    T_PRINT   shift, and go to state 56
    T_RETURN  shift, and go to state 57
    T_IF      shift, and go to state 58
    T_WHILE   shift, and go to state 59
    T_DO      shift, and go to state 60
    T_ID      shift, and go to state 1
    T_INT     shift, and go to state 14
    T_BOOL    shift, and go to state 15

    $default  reduce using rule 27 (body)

    body          go to state 61
    declarations  go to state 62
    declaration   go to state 63
    return_       go to state 64
    statements    go to state 65
    statement     go to state 66
    assignment    go to state 67
    if_else       go to state 68
    while_        go to state 69
    do_while      go to state 70
    print         go to state 71
    name          go to state 72
    type          go to state 73
    method_call   go to state 74


State 55

   18 method_decl: name T_LPAREN params T_RPAREN T_ARROW type T_LBRACKET • body T_RBRACKET

    T_PRINT   shift, and go to state 56
    T_RETURN  shift, and go to state 57
    T_IF      shift, and go to state 58
    T_WHILE   shift, and go to state 59
    T_DO      shift, and go to state 60
    T_ID      shift, and go to state 1
    T_INT     shift, and go to state 14
    T_BOOL    shift, and go to state 15

    $default  reduce using rule 27 (body)

    body          go to state 75
    declarations  go to state 62
    declaration   go to state 63
    return_       go to state 64
    statements    go to state 65
    statement     go to state 66
    assignment    go to state 67
    if_else       go to state 68
    while_        go to state 69
    do_while      go to state 70
    print         go to state 71
    name          go to state 72
    type          go to state 73
    method_call   go to state 74


State 56

   48 print: T_PRINT • expression

    T_NEW         shift, and go to state 76
    T_UNARYMINUS  shift, and go to state 77
    T_NOT         shift, and go to state 78
    T_LPAREN      shift, and go to state 79
    T_ID          shift, and go to state 1
    T_TRUE        shift, and go to state 80
    T_FALSE       shift, and go to state 81
    T_NUM         shift, and go to state 82

    name         go to state 83
    expression   go to state 84
    new          go to state 85
    method_call  go to state 86


State 57

   33 return_: T_RETURN • expression T_SEMICOLON

    T_NEW         shift, and go to state 76
    T_UNARYMINUS  shift, and go to state 77
    T_NOT         shift, and go to state 78
    T_LPAREN      shift, and go to state 79
    T_ID          shift, and go to state 1
    T_TRUE        shift, and go to state 80
    T_FALSE       shift, and go to state 81
    T_NUM         shift, and go to state 82

    name         go to state 83
    expression   go to state 87
    new          go to state 85
    method_call  go to state 86


State 58

   44 if_else: T_IF • expression T_LBRACKET statements T_RBRACKET
   45        | T_IF • expression T_LBRACKET statements T_RBRACKET T_ELSE T_LBRACKET statements T_RBRACKET

    T_NEW         shift, and go to state 76
    T_UNARYMINUS  shift, and go to state 77
    T_NOT         shift, and go to state 78
    T_LPAREN      shift, and go to state 79
    T_ID          shift, and go to state 1
    T_TRUE        shift, and go to state 80
    T_FALSE       shift, and go to state 81
    T_NUM         shift, and go to state 82

    name         go to state 83
    expression   go to state 88
    new          go to state 85
    method_call  go to state 86


State 59

   46 while_: T_WHILE • expression T_LBRACKET statements T_RBRACKET

    T_NEW         shift, and go to state 76
    T_UNARYMINUS  shift, and go to state 77
    T_NOT         shift, and go to state 78
    T_LPAREN      shift, and go to state 79
    T_ID          shift, and go to state 1
    T_TRUE        shift, and go to state 80
    T_FALSE       shift, and go to state 81
    T_NUM         shift, and go to state 82

    name         go to state 83
    expression   go to state 89
    new          go to state 85
    method_call  go to state 86


State 60

   47 do_while: T_DO • T_LBRACKET statements T_RBRACKET T_WHILE T_LPAREN expression T_RPAREN

    T_LBRACKET  shift, and go to state 90


State 61

   19 method_decl: name T_LPAREN params T_RPAREN T_ARROW T_NONE T_LBRACKET body • T_RBRACKET

    T_RBRACKET  shift, and go to state 91


State 62

   20 body: declarations • statements return_
   21     | declarations • statements
   22     | declarations • return_
   23     | declarations •
   28 declarations: declarations • declaration

    T_PRINT   shift, and go to state 56
    T_RETURN  shift, and go to state 57
    T_IF      shift, and go to state 58
    T_WHILE   shift, and go to state 59
    T_DO      shift, and go to state 60
    T_ID      shift, and go to state 1
    T_INT     shift, and go to state 14
    T_BOOL    shift, and go to state 15

    $default  reduce using rule 23 (body)

    declaration  go to state 92
    return_      go to state 93
    statements   go to state 94
    statement    go to state 66
    assignment   go to state 67
    if_else      go to state 68
    while_       go to state 69
    do_while     go to state 70
    print        go to state 71
    name         go to state 72
    type         go to state 73
    method_call  go to state 74


State 63

   29 declarations: declaration •

    $default  reduce using rule 29 (declarations)


State 64

   26 body: return_ •

    $default  reduce using rule 26 (body)


State 65

   24 body: statements • return_
   25     | statements •
   34 statements: statements • statement

    T_PRINT   shift, and go to state 56
    T_RETURN  shift, and go to state 57
    T_IF      shift, and go to state 58
    T_WHILE   shift, and go to state 59
    T_DO      shift, and go to state 60
    T_ID      shift, and go to state 1

    $default  reduce using rule 25 (body)

    return_      go to state 95
    statement    go to state 96
    assignment   go to state 67
    if_else      go to state 68
    while_       go to state 69
    do_while     go to state 70
    print        go to state 71
    name         go to state 97
    method_call  go to state 74


State 66

   35 statements: statement •

    $default  reduce using rule 35 (statements)


State 67

   36 statement: assignment • T_SEMICOLON

    T_SEMICOLON  shift, and go to state 98


State 68

   38 statement: if_else •

    $default  reduce using rule 38 (statement)


State 69

   39 statement: while_ •
